--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
     <script type="text/javascript" src="uglifyjs.js"></script>
     <script type="text/javascript" src="columnate.js"></script>
-    <script>
+    <script defer>
 
         function CreateLink() {
 
