--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             return false;
         };
 
-        document.querySelector("body").onload = CreateLink();
-        document.getElementById("bookmarkletLink").onclick = ClickHelp();
+        document.querySelector("body").onload = CreateLink;
+        document.getElementById("bookmarkletLink").onclick = ClickHelp;
     </script>
 
 </head>
