--- a/index.html
+++ b/index.html
@@ -18,31 +18,7 @@
     </style>
     <script type="text/javascript" src="uglifyjs.js"></script>
     <script type="text/javascript" src="columnate.js"></script>
-    <script defer>
-
-        function CreateLink() {
-
-            // cribbed from bookmarkletify
-            var toplevel_ast = UglifyJS.parse(Columnate.toString() + "Columnate();");
-            toplevel_ast.figure_out_scope();
-            var compressor = UglifyJS.Compressor();
-            var compressed_ast = toplevel_ast.transform(compressor);
-            compressed_ast.figure_out_scope();
-
-            var url = "javascript: (function () {" + compressed_ast.print_to_string() + "}())";
-            document.getElementById("bookmarkletLink").href = url;
-            document.getElementById("bookmarkletLink").className = "ready";
-        };
-
-        function ClickHelp() {
-            alert("Drag this link to your bookmark bar.");
-            return false;
-        };
-
-        document.querySelector("body").onload = CreateLink;
-        document.getElementById("bookmarkletLink").onclick = ClickHelp;
-    </script>
-
+    <script defer type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
