--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>notColumnate</title>
+    <title>Unclutter</title>
     <style type="text/css">
         body {
             font-family: sans-serif;
@@ -23,14 +23,14 @@
 
 <body>
 
-    <h1>notColumnate</h1>
+    <h1>Unclutter</h1>
 
     <p>Drag this link to your bookmarks bar to install:</p>
 
-    <p><strong><a href="#" id="bookmarkletLink" title="Drag this link to your bookmark bar.">notColumnate</a></strong>
+    <p><strong><a href="#" id="bookmarkletLink" title="Drag this link to your bookmark bar.">Unclutter</a></strong>
     </p>
 
-    <p>Now find a web page with a long article. Click the <strong>notColumnate</strong> bookmarklet to reformat the page
+    <p>Now find a web page with a long article. Click the <strong>Unclutter</strong> bookmarklet to reformat the page
         free of distractions.</p>
 
     <p>Visit the original <a href="https://github.com/anoved/Columnate">Columnate project page</a>. Visit this fork's <a
